static/css/file_converter.css
.box
{
    position: absolute;
    top: 50%;
    left:50%;
    transform:translate(-50%,-50%);


    background: rgba(54, 54, 54, 0.5);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(2.4px);
    -webkit-backdrop-filter: blur(2.4px);
    border: 1px solid rgba(54, 54, 54, 0.41);

    width: 60vh;
    height: 60vh;
    font-family: Arial;

    animation: slide_in 1s;
    animation-fill-mode:forwards;
    z-index:100;

}

#content-title
{
    position:absolute;
    top: 2vh;
    left:50%;
    width:100%;

    transform:translate(-50%,-50%);

    text-align:center;
    font-size: 4vh;
    color: rgba(255, 255, 255, 0.8);
    margin-top:3vh;
    margin-bottom:0vh;
}
#percentage_bar{
    margin:auto;
    position:absolute;
    top: 50%;
    left:50%;
    transform:translate(-50%,-50%);

    user-select: none;
    box-sizing: border-box;
    width: 40vh;
    height: 40vh;
}
.loader-bg
{
    width: 100%;
    height: 100%;
    border-radius: 50%;
    border: 1vh solid rgba(255, 255, 255, 0.1);
    box-sizing: border-box;
}
.spiner-holder-one
{
    position: absolute;
    top:0;
    left:0;
    overflow: hidden;
    width: 50%;
    height: 50%;
    background: transparent;
    box-sizing: border-box;
}
.spiner-holder-two
{
    position: absolute;
    top:0;
    left:0;
    overflow: hidden;
    width: 100%;
    height: 100%;
    background: transparent;
    box-sizing: border-box;
}
.loader-spiner
{
    width: 200%;
    height: 200%;
    border-radius: 50%;
    border: 1vh solid rgba(255, 255, 255, 0.3);
    box-sizing: border-box;
}
  .animate-0-25-a
{
    transform: rotate(90deg);
    transform-origin: 100% 100%;
}
.animate-0-25-b
{
    transform: rotate(-90deg);
    transform-origin: 100% 100%;
}
.animate-25-50-a
{
    transform: rotate(180deg);
    transform-origin: 100% 100%;
}
.animate-25-50-b
{
    transform: rotate(-90deg);
    transform-origin: 100% 100%;
}
.animate-50-75-a
{
    transform: rotate(270deg);
    transform-origin: 100% 100%;
}
.animate-50-75-b
{
    transform: rotate(-90deg);
    transform-origin:100% 100%;
}
.animate-75-100-a
{
    transform: rotate(0deg);
    transform-origin: 100% 100%;
}
.animate-75-100-b
{
    transform: rotate(-90deg);
    transform-origin: 100% 100%;
}
#percentage_text
{
    margin:auto;
    user-select: none;
    box-sizing: border-box;

    position: absolute;
    top: 50%;
    left:50%;
    transform:translate(-50%,-50%);

    text-align: center;
    font-size: 7vh;
    color: rgba(255, 255, 255, 0.8);
}



.drag-area{
    border: 2px solid #fff;
    background: rgba(255,255,255,0.0);
  height: 100%;
  width: 100%;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
.drag-area.active{
  border: 2px dashed #fff;
  background: rgba(255,255,255,0.2);
}

.drag-area.notactive{
  background: rgba(255,255,255,0) !important;
}


.drag-area .icon{
  font-size: 100px;
  color: #fff;
}
.drag-area header{
  font-size: 30px;
  font-weight: 500;
  color: #fff;
}
.drag-area span{
  font-size: 25px;
  font-weight: 500;
  color: #fff;
  margin: 10px 0 15px 0;
}
.drag-area button{
  padding: 10px 25px;
  font-size: 20px;
  font-weight: 500;
  border: solid white 1px;
  outline: none;
  background: none;
  color: white;
  border-radius: 5px;
  cursor: pointer;
}
.drag-area img{
  height: 100%;
  width: 100%;
  object-fit: cover;
  border-radius: 5px;
}






#alert
{
    position: absolute;
    z-index:1000;
    width:50%;
    min-height:15ch;
    background-color:#1a1a1a;
    border-radius: 5px;
    border: black solid 3px;
    left:0;
    right:0;
    margin-left:auto;
    margin-right:auto;
    top:50%;
    transform: translateY(-50%);
    padding:15px;
    color:white;
    display:none;
}

#alert > span
{
    width:97%;
    margin:auto;
    font-size:14px;
    white-space: pre-line;
}

#alert > button {
	width: 40%;
	bottom: 15px;
	margin-left: auto;
	margin-right: auto;
	display:block;
	color: white;
	background-color: #1f1f1f;
	border: solid 1px black;
	border-radius: 5px;
	font-size: 20px;
	height: 5ch;
	margin-top:15px;
}


#alert > button:hover {
    background-color: #333;
}


#file_info
{

}

#file_info_filename, #file_info_length, #file_info_rate, #file_info_channels
{
    color: #bfbcb2;
    padding-left:35px;
}

#file_info > th
{
    font-weight: bold;
}

.table_row
{
   margin-bottom:5vh;
}

#file_info_table
{
    margin:auto;
    width:80%;
    font-size: 3vh;
    text-align: left;
    border-collapse:separate;
  border-spacing: 0 2vh;
}



.convert_options
{
     margin:auto;
    position:absolute;
    bottom: 10%;
    left:50%;
    transform:translate(-50%,-50%);
    width:max-content;
}

.download_options
{
     margin:auto;
    position:absolute;
    bottom: 0%;
    left:50%;
    transform:translate(-50%,-50%);
    width:max-content;
}



#output_image
{
    border: black solid 1px;
    width:80%;
    position:absolute;
    top: 40%;
    left:50%;
    transform:translate(-50%,-50%);
}




@keyframes slide_in
{
   0%
   {
      top:200%;
   }

   100%
   {
      top:50%;
   }

}

@keyframes slide_out
{
   0%
   {
      top:50%;
   }

   100%
   {
      top:-35%;
   }

}

.slide_out
{
    animation: slide_out 1s !important;
    animation-fill-mode:forwards !important;
}

#lpm
{
width:fit-content;
display:block;
margin:auto;
margin-top:2vh;
}

/*the container must be positioned relative:*/
.custom-select {
  position: relative;
  font-family: Arial;
}

.custom-select select {
  display: none; /*hide original SELECT element:*/
}

.select-selected {
  background-color: #646464;
}

/*style the arrow inside the select element:*/
.select-selected:after {
  position: absolute;
  content: "";
  top: 14px;
  right: 10px;
  width: 0;
  height: 0;
  border: 6px solid transparent;
  border-color: #fff transparent transparent transparent;
}

/*point the arrow upwards when the select box is open (active):*/
.select-selected.select-arrow-active:after {
  border-color: transparent transparent #fff transparent;
  top: 7px;
}

/*style the items (options), including the selected item:*/
.select-items div,.select-selected {
  color: #ffffff;
  padding: 8px 16px;
  border: 2px solid black;
  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
  cursor: pointer;
  user-select: none;
}

/*style items (options):*/
.select-items {
  position: absolute;
  background-color: #2f2f2f;
  top: 100%;
  left: 0;
  right: 0;
  z-index: 99;
}

/*hide the items when the select box is closed:*/
.select-hide {
  display: none;
}

.select-items div:hover, .same-as-selected {
  background-color: rgba(0, 0, 0, 0.1);
}

